go to definition

--- a/Vs2010Integration/TechTalk.SpecFlow.Vs2010Integration.csproj
+++ b/Vs2010Integration/TechTalk.SpecFlow.Vs2010Integration.csproj
@@ -170,6 +170,7 @@
     <Compile Include="AutoComplete\CompletionSource.cs" />
     <Compile Include="AutoComplete\HierarchicalCompletionSet.cs" />
     <Compile Include="Bindings\BindingType.cs" />
+    <Compile Include="Bindings\StepInstance.cs" />
     <Compile Include="EditorCommands\EditorCommandFilter.cs" />
     <Compile Include="EditorCommands\EditorCommands.cs" />
     <Compile Include="LanguageService\ProjectFeatureFilesTracker.cs" />
