--- a/Vs2010Integration/TechTalk.SpecFlow.Vs2010Integration.csproj
+++ b/Vs2010Integration/TechTalk.SpecFlow.Vs2010Integration.csproj
@@ -169,8 +169,19 @@
     <Compile Include="AutoComplete\GherkinCompletionCommandFilter.cs" />
     <Compile Include="AutoComplete\GherkinStepCompletionSource.cs" />
     <Compile Include="AutoComplete\HierarchicalCompletionSet.cs" />
+    <Compile Include="Bindings\BindingMatch.cs" />
+    <Compile Include="Bindings\BindingMatchService.cs" />
+    <Compile Include="Bindings\IBindingRegistry.cs" />
+    <Compile Include="Bindings\Reflection\BindingMethodComparer.cs" />
+    <Compile Include="Bindings\Reflection\BindingReflectionExtensions.cs" />
+    <Compile Include="Bindings\BindingScope.cs" />
     <Compile Include="Bindings\BindingType.cs" />
+    <Compile Include="Bindings\Reflection\IBindingMethod.cs" />
+    <Compile Include="Bindings\Reflection\IBindingParameter.cs" />
+    <Compile Include="Bindings\Reflection\IBindingType.cs" />
+    <Compile Include="Bindings\StepBinding.cs" />
     <Compile Include="Bindings\StepInstance.cs" />
+    <Compile Include="Bindings\StepScope.cs" />
     <Compile Include="EditorCommands\EditorCommandFilter.cs" />
     <Compile Include="EditorCommands\EditorCommands.cs" />
     <Compile Include="LanguageService\BindingFilesTracker.cs" />
