--- a/NuGetIntegration/SpecFlow.nuspec
+++ b/NuGetIntegration/SpecFlow.nuspec
@@ -4,8 +4,8 @@
     <id>SpecFlow</id>
     <version>1.5.0</version>
 	<title>SpecFlow</title>
-    <authors>Gáspár Nagy,Attila Sztupák,Christoph Seufert,Christian Hassa,Jonas Bandi</authors>
-    <owners>Gáspár Nagy,Attila Sztupák,Christoph Seufert,Christian Hassa,Jonas Bandi</owners>
+    <authors>TechTalk</authors>
+    <owners>TechTalk</owners>
     <description>SpecFlow aims at bridging the communication gap between domain experts and developers by binding business readable behavior specifications to the underlying implementation. Our mission is to provide a pragmatic and frictionless approach to Acceptance Test Driven Development and Behavior Driven Development for .NET projects today.</description>
     <summary>SpecFlow aims at bridging the communication gap between domain experts and developers by binding business readable behavior specifications to the underlying implementation. Our mission is to provide a pragmatic and frictionless approach to Acceptance Test Driven Development and Behavior Driven Development for .NET projects today.</summary>
     <language>en-US</language>
