--- a/IdeIntegration/TechTalk.SpecFlow.IdeIntegration.csproj
+++ b/IdeIntegration/TechTalk.SpecFlow.IdeIntegration.csproj
@@ -47,8 +47,10 @@
     <Compile Include="..\..\VersionInfo.cs">
       <Link>Properties\VersionInfo.cs</Link>
     </Compile>
-    <Compile Include="GeneratorServices.cs" />
+    <Compile Include="Generator\GeneratorServices.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Generator\RemoteAppDomainTestGeneratorFactory.cs" />
+    <Compile Include="Generator\RemoteGeneratorServices.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Generator\TechTalk.SpecFlow.Generator.csproj">
