--- a/SharpDevelop4Integration/TechTalk.SpecFlow.SharpDevelop4Integration.csproj
+++ b/SharpDevelop4Integration/TechTalk.SpecFlow.SharpDevelop4Integration.csproj
@@ -34,15 +34,15 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="ICSharpCode.Core">
-      <HintPath>..\..\lib\SharpDevelop\ICSharpCode.Core.dll</HintPath>
+      <HintPath>..\..\lib\SharpDevelop4\ICSharpCode.Core.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="ICSharpCode.SharpDevelop">
-      <HintPath>..\..\lib\SharpDevelop\ICSharpCode.SharpDevelop.dll</HintPath>
+      <HintPath>..\..\lib\SharpDevelop4\ICSharpCode.SharpDevelop.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="ICSharpCode.SharpDevelop.Dom">
-      <HintPath>..\..\lib\SharpDevelop\ICSharpCode.SharpDevelop.Dom.dll</HintPath>
+      <HintPath>..\..\lib\SharpDevelop4\ICSharpCode.SharpDevelop.Dom.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="PresentationCore" />
@@ -67,6 +67,7 @@
   <ItemGroup>
     <None Include="SharpDevelop4Integration.addin">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </None>
     <Content Include="Templates\SpecFlowEventDefinition.xft">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -93,8 +94,6 @@
       <Name>TechTalk.SpecFlow.Parser</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Templates" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.Targets" />
 </Project>
