--- a/SharpDevelop4Integration/TechTalk.SpecFlow.SharpDevelop4Integration.csproj
+++ b/SharpDevelop4Integration/TechTalk.SpecFlow.SharpDevelop4Integration.csproj
@@ -80,7 +80,13 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Configuration\AssemblyInfo.cs" />
+    <Compile Include="..\..\CommonAssemblyInfo.cs">
+      <Link>Properties\CommonAssemblyInfo.cs</Link>
+    </Compile>
+    <Compile Include="..\..\VersionInfo.cs">
+      <Link>Properties\VersionInfo.cs</Link>
+    </Compile>
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FileUtilities.cs" />
     <Compile Include="SpecFlowSingleFileGenerator.cs" />
   </ItemGroup>
