--- a/Vs2010Integration/TechTalk.SpecFlow.Vs2010Integration.csproj
+++ b/Vs2010Integration/TechTalk.SpecFlow.Vs2010Integration.csproj
@@ -170,9 +170,6 @@
     <Compile Include="..\..\Runtime\ProgrammingLanguage.cs">
       <Link>BindingSkeletons\ProgrammingLanguage.cs</Link>
     </Compile>
-    <Compile Include="..\..\Runtime\StringExtensions.cs">
-      <Link>BindingSkeletons\StringExtensions.cs</Link>
-    </Compile>
     <Compile Include="..\..\Runtime\Table.cs">
       <Link>Bindings\Table.cs</Link>
     </Compile>
@@ -328,6 +325,10 @@
     <ProjectReference Include="..\..\Parser\TechTalk.SpecFlow.Parser.csproj">
       <Project>{7CCEF6D6-FC17-422E-9BED-EDD752B6496F}</Project>
       <Name>TechTalk.SpecFlow.Parser</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Runtime\TechTalk.SpecFlow.csproj">
+      <Project>{413EE28C-4F89-4C6F-BA1E-2CDEE4CD43B4}</Project>
+      <Name>TechTalk.SpecFlow</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Utils\TechTalk.SpecFlow.Utils.csproj">
       <Project>{C0AF4A43-0C3B-47C7-86DE-79FB632B1453}</Project>
