--- a/Vs2010Integration/TechTalk.SpecFlow.Vs2010Integration.csproj
+++ b/Vs2010Integration/TechTalk.SpecFlow.Vs2010Integration.csproj
@@ -195,9 +195,11 @@
     <Compile Include="Bindings\StepBinding.cs" />
     <Compile Include="Bindings\StepInstance.cs" />
     <Compile Include="Bindings\StepScope.cs" />
+    <Compile Include="Commands\DebugScenariosCommand.cs" />
     <Compile Include="Commands\DelegateMenuCommandHandler.cs" />
     <Compile Include="Commands\RegisterCommands.cs" />
     <Compile Include="Commands\RunScenariosCommand.cs" />
+    <Compile Include="Commands\SpecFlowProjectSingleSelectionCommand.cs" />
     <Compile Include="EditorCommands\EditorCommandFilter.cs" />
     <Compile Include="EditorCommands\EditorCommands.cs" />
     <Compile Include="Generator\VsGeneratorInfoProvider.cs" />
