first prototype for caching analysis result

--- a/Vs2010Integration/TechTalk.SpecFlow.Vs2010Integration.csproj
+++ b/Vs2010Integration/TechTalk.SpecFlow.Vs2010Integration.csproj
@@ -122,6 +122,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\VS2010SDK\v2.0\Microsoft.VisualStudio.TextManager.Interop.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\..\..\..\Temp\TechTalk.SpecRun.Server\packages\Newtonsoft.Json.4.0.2\lib\net40\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
@@ -187,9 +190,12 @@
     <Compile Include="Bindings\BindingMatch.cs" />
     <Compile Include="Bindings\BindingMatchService.cs" />
     <Compile Include="Bindings\IBindingRegistryNew.cs" />
+    <Compile Include="Bindings\Reflection\BindingMethod.cs" />
     <Compile Include="Bindings\Reflection\BindingMethodComparer.cs" />
+    <Compile Include="Bindings\Reflection\BindingParameter.cs" />
     <Compile Include="Bindings\Reflection\BindingReflectionExtensions.cs" />
     <Compile Include="Bindings\BindingScope.cs" />
+    <Compile Include="Bindings\Reflection\BindingType.cs" />
     <Compile Include="Bindings\Reflection\IBindingMethod.cs" />
     <Compile Include="Bindings\Reflection\IBindingParameter.cs" />
     <Compile Include="Bindings\Reflection\IBindingType.cs" />
@@ -208,10 +214,11 @@
     <Compile Include="LanguageService\BindingFilesTracker.cs" />
     <Compile Include="LanguageService\ProjectFeatureFilesTracker.cs" />
     <Compile Include="LanguageService\ProjectFilesTracker.cs" />
-    <Compile Include="LanguageService\VsBindingMethod.cs" />
+    <Compile Include="LanguageService\VsBindingReflectionFactory.cs" />
     <Compile Include="LanguageService\VsStepSuggestionBindingCollector.cs" />
     <Compile Include="LanguageService\VsStepSuggestionProvider.cs" />
     <Compile Include="Commands\MenuCommandHandler.cs" />
+    <Compile Include="StepSuggestions\BindingMap.cs" />
     <Compile Include="TestRunner\AutoTestRunnerGateway.cs" />
     <Compile Include="TestRunner\CommandBasedTestRunnerGateway.cs" />
     <Compile Include="TestRunner\ITestRunnerGateway.cs" />
