--- a/Vs2010Integration/TechTalk.SpecFlow.Vs2010Integration.csproj
+++ b/Vs2010Integration/TechTalk.SpecFlow.Vs2010Integration.csproj
@@ -214,6 +214,8 @@
     <Compile Include="TestRunner\TestRunnerEngine.cs" />
     <Compile Include="Utils\FileChangeEventsListener.cs" />
     <Compile Include="Utils\SolutionEventsListener.cs" />
+    <Compile Include="Utils\VsProjectFilesTracker.cs" />
+    <Compile Include="Utils\VsProjectFileTrackerBase.cs" />
     <Compile Include="VsContainerBuilder.cs" />
     <Compile Include="VsSpecFlowConfigurationReader.cs" />
     <Compile Include="Guids.cs" />
